--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -28,6 +28,7 @@
     "expo-image": "~2.4.0",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.7",
+    "expo-location": "^18.1.6",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -44,7 +45,7 @@
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "^5.6.1",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.12.1",
     "react-native-vector-icons": "^10.3.0",
