--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "express": "^4.18.2",
@@ -17,6 +18,7 @@
     "mongoose": "^7.5.0",
     "mongoose-paginate-v2": "^1.9.1",
     "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.9.4"
   },
   "devDependencies": {
