--- a/Mobile-App/package.json
+++ b/Mobile-App/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.11.0",
     "expo": "~54.0.1",
     "expo-constants": "~18.0.8",
+    "expo-dev-client": "^6.0.12",
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.7",
     "expo-haptics": "~15.0.6",
