--- a/Mobile-App/package.json
+++ b/Mobile-App/package.json
@@ -31,6 +31,7 @@
     "expo-linear-gradient": "^15.0.7",
     "expo-linking": "~8.0.7",
     "expo-location": "~19.0.7",
+    "expo-notifications": "^0.32.11",
     "expo-router": "~6.0.0",
     "expo-splash-screen": "~31.0.8",
     "expo-status-bar": "~3.0.7",
@@ -46,6 +47,7 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-maps": "1.20.1",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "~4.16.0",
